Switch from 6to5 to babel in travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
     - BIN="rhino" OPTION="-require"
     - BIN="ringo"
     - BUILD="modern"
-    - BUILD="modern" EXPORTS="es"  TRANSPILER="6to5"
+    - BUILD="modern" EXPORTS="es"  TRANSPILER="babel"
     - BUILD="modern" EXPORTS="es"  TRANSPILER="es6-module-transpiler"
     - BUILD="modern" EXPORTS="es6" TRANSPILER="es6-module-transpiler"
     - BUILD="modern" EXPORTS="iojs"
@@ -67,9 +67,9 @@ before_install:
   - "[ $EXPORTS != 'amd' ] || npm i chalk@\"0.5.1\" ecstatic@\"0.6.0\" request@\"^2.0.0\" sauce-tunnel@\"2.2.2\""
   - "([ $EXPORTS != 'es' ] && [ $EXPORTS != 'es6' ]) || TARGET_PATH=\"../../../$EXPORTS/lodash.js\""
   - "[ $EXPORTS != 'npm' ] || OUTPUT_PATH=\"./npm/node_modules\""
-  - "[ $TEST_BUILDS == true ]  || (npm i && node ./bin/lodash modularize $BUILD exports=$EXPORTS -o $OUTPUT_PATH)"
-  - "[ $TRANSPILER != '6to5' ] || npm i -g 6to5@\"^2.0.0\""
-  - "[ $TRANSPILER != '6to5' ] || 6to5 ./$EXPORTS --out-dir ./$EXPORTS"
+  - "[ $TEST_BUILDS == true ]   || (npm i && node ./bin/lodash modularize $BUILD exports=$EXPORTS -o $OUTPUT_PATH)"
+  - "[ $TRANSPILER != 'babel' ] || npm i -g babel@\"^4.0.0\""
+  - "[ $TRANSPILER != 'babel' ] || babel ./$EXPORTS --out-dir ./$EXPORTS"
   - "[ $TRANSPILER != 'es6-module-transpiler' ] || npm i -g es6-module-transpiler@\"0.10.0\""
   - "[ $TRANSPILER != 'es6-module-transpiler' ] || compile-modules convert -f commonjs -o ./ ./$EXPORTS/*.js ./$EXPORTS/**/*.js"
   - "[ $EXPORTS != 'npm' ] || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
