--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "files": [
     "npm-shrinkwrap.json",
     "bin/lodash",
+    "lib/listing.js",
+    "lib/mapping.js",
     "lib/minify.js",
     "lib/pre-compile.js",
     "lib/post-compile.js",
