--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
     - TEST_BUILDS=true
 matrix:
   include:
-    - node_js: "io.js"
+    - node_js: "iojs"
       env: BUILD="modern" EXPORTS="iojs"
     - node_js: "0.8"
       env: NPM_VERSION="~1.4.0"
