Temporarily reduce scope of automated testing until things are more stable.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ env:
   matrix:
     -
     - EXPORTS="node"
-    - BIN="rhino" OPTION="-opt -1 -require"
-    - BIN="ringo" OPTION="-o -1"
+#    - BIN="rhino" OPTION="-opt -1 -require"
+#    - BIN="ringo" OPTION="-o -1"
     - BUILD="modern"
     - BUILD="modern" EXPORTS="es"  TRANSPILER="babel"
     - BUILD="modern" EXPORTS="es"  TRANSPILER="es6-module-transpiler"
@@ -36,18 +36,18 @@ matrix:
       env: BUILD="modern"
     - node_js: "0.10"
       env: BUILD="modern" EXPORTS="npm"
-    - node_js: "0.12"
-      env: EXPORTS="amd"
-    - node_js: "0.12"
-      env: EXPORTS="amd" LOADER="curl"
-    - node_js: "0.12"
-      env: EXPORTS="amd" LOADER="dojo"
-    - node_js: "0.12"
-      env: BUILD="modern" EXPORTS="amd"
-    - node_js: "0.12"
-      env: BUILD="modern" EXPORTS="amd" LOADER="curl"
-    - node_js: "0.12"
-      env: BUILD="modern" EXPORTS="amd" LOADER="dojo"
+#    - node_js: "0.12"
+#      env: EXPORTS="amd"
+#    - node_js: "0.12"
+#      env: EXPORTS="amd" LOADER="curl"
+#    - node_js: "0.12"
+#      env: EXPORTS="amd" LOADER="dojo"
+#    - node_js: "0.12"
+#      env: BUILD="modern" EXPORTS="amd"
+#    - node_js: "0.12"
+#      env: BUILD="modern" EXPORTS="amd" LOADER="curl"
+#    - node_js: "0.12"
+#      env: BUILD="modern" EXPORTS="amd" LOADER="dojo"
 git:
   depth: 10
 branches:
@@ -58,10 +58,10 @@ before_install:
   - "npm config set loglevel error"
   - "npm i -g npm@\"$NPM_VERSION\""
   - "git clone --depth=10 --branch=master git://github.com/lodash/lodash ./node_modules/lodash && cd $_ && npm i && cd ../../"
-  - "[ $BIN != 'rhino' ] || (sudo mkdir /opt/rhino-1.7.6 && sudo wget --no-check-certificate -O $_/js.jar https://lodash.com/_travis/rhino-1.7.6.jar)"
-  - "[ $BIN != 'rhino' ] || (echo -e '#!/bin/sh\\njava -jar /opt/rhino-1.7.6/js.jar $@' | sudo tee /usr/local/bin/rhino && sudo chmod +x /usr/local/bin/rhino)"
-  - "[ $BIN != 'ringo' ] || (wget --no-check-certificate https://lodash.com/_travis/ringojs-0.11.zip && sudo unzip ringojs-0.11 -d /opt && rm ringojs-0.11.zip)"
-  - "[ $BIN != 'ringo' ] || (sudo ln -s /opt/ringojs-0.11/bin/ringo /usr/local/bin/ringo && sudo chmod +x $_)"
+#  - "[ $BIN != 'rhino' ] || (sudo mkdir /opt/rhino-1.7.6 && sudo wget --no-check-certificate -O $_/js.jar https://lodash.com/_travis/rhino-1.7.6.jar)"
+#  - "[ $BIN != 'rhino' ] || (echo -e '#!/bin/sh\\njava -jar /opt/rhino-1.7.6/js.jar $@' | sudo tee /usr/local/bin/rhino && sudo chmod +x /usr/local/bin/rhino)"
+#  - "[ $BIN != 'ringo' ] || (wget --no-check-certificate https://lodash.com/_travis/ringojs-0.11.zip && sudo unzip ringojs-0.11 -d /opt && rm ringojs-0.11.zip)"
+#  - "[ $BIN != 'ringo' ] || (sudo ln -s /opt/ringojs-0.11/bin/ringo /usr/local/bin/ringo && sudo chmod +x $_)"
   - "OUTPUT_PATH=\"./$EXPORTS\" && TARGET_PATH=\"../../../$EXPORTS/index.js\""
   - "[ $EXPORTS != 'amd' ] || TARGET_PATH=\"../../../amd/main.js\""
   - "[ $EXPORTS != 'amd' ] || (QUERY=\"build=$TARGET_PATH&loader=$LOADER\" && TAGS=\"$BUILD,$LOADER,amd,development\")"
@@ -75,9 +75,9 @@ before_install:
   - "[ $TRANSPILER != 'es6-module-transpiler' ] || compile-modules convert -f commonjs -o ./ ./$EXPORTS/*.js ./$EXPORTS/**/*.js"
   - "[ $EXPORTS != 'npm' ] || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
 script:
-  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
-  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"backbone tests\"   runner=\"$RUNNER_PATH/backbone.html?$QUERY\"   tags=\"$TAGS,backbone\""
-  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"underscore tests\" runner=\"$RUNNER_PATH/underscore.html?$QUERY\" tags=\"$TAGS,underscore\""
-  - "[ $EXPORTS != 'amd' ] || [ $BUILD != 'compat' ]    || node $SAUCE_PATH name=\"lodash tests\" runner=\"$RUNNER_PATH/index.html?$QUERY\" tags=\"$TAGS,ie-compat\" compatMode=7"
+#  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
+#  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"backbone tests\"   runner=\"$RUNNER_PATH/backbone.html?$QUERY\"   tags=\"$TAGS,backbone\""
+#  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"underscore tests\" runner=\"$RUNNER_PATH/underscore.html?$QUERY\" tags=\"$TAGS,underscore\""
+#  - "[ $EXPORTS != 'amd' ] || [ $BUILD != 'compat' ]    || node $SAUCE_PATH name=\"lodash tests\" runner=\"$RUNNER_PATH/index.html?$QUERY\" tags=\"$TAGS,ie-compat\" compatMode=7"
   - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == true ]  || $BIN $OPTION $RUNNER_PATH/test.js $TARGET_PATH"
   - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == false ] || node ./test/test.js --time-limit 45m"
