--- a/.travis.yml
+++ b/.travis.yml
@@ -3,39 +3,33 @@ node_js:
   - "0.12"
 env:
   global:
-    - BIN="node" BUILD="compat" EXPORTS="commonjs" NPM_VERSION="^2.0.0"
+    - BIN="node" EXPORTS="commonjs" NPM_VERSION="^2.0.0"
     - OPTION="" TEST_BUILDS=false TRANSPILER="none"
     - LOADER="requirejs" RUNNER_PATH="node_modules/lodash/test"
     - SAUCE_PATH="$RUNNER_PATH/saucelabs.js" SAUCE_USERNAME="lodash"
     - secure: "HUCzn6i9XZ53278fYMICHuHWaVtTZmJCfY4wv3BEu57CGshw9T399Vxul849vIusw3x9cf4iNrrry0RaZga7KfaJIVSESy4zeY4vnsJ+5QCiXGbobpNPYnhU50eTo95MqDh1/Uds+cv2HCo+4VH8yb+6k/p9xX0CC3TvvToX60M="
   matrix:
     -
-    - EXPORTS="node"
 #    - BIN="rhino" OPTION="-opt -1 -require"
 #    - BIN="ringo" OPTION="-o -1"
-    - BUILD="modern"
-    - BUILD="modern" EXPORTS="es"  TRANSPILER="babel"
-    - BUILD="modern" EXPORTS="es"  TRANSPILER="es6-module-transpiler"
-    - BUILD="modern" EXPORTS="es6" TRANSPILER="babel"
-    - BUILD="modern" EXPORTS="node"
-    - BUILD="modern" EXPORTS="npm"
+    - EXPORTS="es"  TRANSPILER="babel"
+    - EXPORTS="es"  TRANSPILER="es6-module-transpiler"
+    - EXPORTS="es6" TRANSPILER="babel"
+    - EXPORTS="node"
+    - EXPORTS="npm"
     - TEST_BUILDS=true
 matrix:
   include:
     - node_js: "iojs"
-      env: BUILD="modern" EXPORTS="iojs"
+      env: EXPORTS="iojs"
     - node_js: "0.8"
       env: NPM_VERSION="~1.4.0"
     - node_js: "0.8"
-      env: BUILD="modern" NPM_VERSION="~1.4.0"
-    - node_js: "0.8"
-      env: BUILD="modern" EXPORTS="npm" NPM_VERSION="~1.4.0"
+      env: EXPORTS="npm" NPM_VERSION="~1.4.0"
     - node_js: "0.10"
       env:
     - node_js: "0.10"
-      env: BUILD="modern"
-    - node_js: "0.10"
-      env: BUILD="modern" EXPORTS="npm"
+      env: EXPORTS="npm"
 #    - node_js: "0.12"
 #      env: EXPORTS="amd"
 #    - node_js: "0.12"
@@ -43,11 +37,11 @@ matrix:
 #    - node_js: "0.12"
 #      env: EXPORTS="amd" LOADER="dojo"
 #    - node_js: "0.12"
-#      env: BUILD="modern" EXPORTS="amd"
+#      env: EXPORTS="amd"
 #    - node_js: "0.12"
-#      env: BUILD="modern" EXPORTS="amd" LOADER="curl"
+#      env: EXPORTS="amd" LOADER="curl"
 #    - node_js: "0.12"
-#      env: BUILD="modern" EXPORTS="amd" LOADER="dojo"
+#      env: EXPORTS="amd" LOADER="dojo"
 git:
   depth: 10
 branches:
@@ -64,11 +58,11 @@ before_install:
 #  - "[ $BIN != 'ringo' ] || (sudo ln -s /opt/ringojs-0.11/bin/ringo /usr/local/bin/ringo && sudo chmod +x $_)"
   - "OUTPUT_PATH=\"./$EXPORTS\" && TARGET_PATH=\"../../../$EXPORTS/index.js\""
   - "[ $EXPORTS != 'amd' ] || TARGET_PATH=\"../../../amd/main.js\""
-  - "[ $EXPORTS != 'amd' ] || (QUERY=\"build=$TARGET_PATH&loader=$LOADER\" && TAGS=\"$BUILD,$LOADER,amd,development\")"
+  - "[ $EXPORTS != 'amd' ] || (QUERY=\"build=$TARGET_PATH&loader=$LOADER\" && TAGS=\"$LOADER,amd,development\")"
   - "[ $EXPORTS != 'amd' ] || npm i chalk@\"^1.0.0\" ecstatic@\"0.8.0\" request@\"^2.0.0\" sauce-tunnel@\"2.2.3\""
   - "([ $EXPORTS != 'es' ] && [ $EXPORTS != 'es6' ]) || TARGET_PATH=\"../../../$EXPORTS/lodash.js\""
   - "[ $EXPORTS != 'npm' ] || OUTPUT_PATH=\"./npm/node_modules\""
-  - "[ $TEST_BUILDS == true ]   || (npm i && node ./bin/lodash modularize $BUILD exports=$EXPORTS -o $OUTPUT_PATH)"
+  - "[ $TEST_BUILDS == true ]   || (npm i && node ./bin/lodash modularize exports=$EXPORTS -o $OUTPUT_PATH)"
   - "[ $TRANSPILER != 'babel' ] || npm i -g babel@\"^5.0.0\""
   - "[ $TRANSPILER != 'babel' ] || babel ./$EXPORTS --out-dir ./$EXPORTS"
   - "[ $TRANSPILER != 'es6-module-transpiler' ] || npm i -g es6-module-transpiler@\"0.10.0\""
@@ -78,6 +72,6 @@ script:
 #  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
 #  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"backbone tests\"   runner=\"$RUNNER_PATH/backbone.html?$QUERY\"   tags=\"$TAGS,backbone\""
 #  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"underscore tests\" runner=\"$RUNNER_PATH/underscore.html?$QUERY\" tags=\"$TAGS,underscore\""
-#  - "[ $EXPORTS != 'amd' ] || [ $BUILD != 'compat' ]    || node $SAUCE_PATH name=\"lodash tests\" runner=\"$RUNNER_PATH/index.html?$QUERY\" tags=\"$TAGS,ie-compat\" compatMode=7"
+#  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\" runner=\"$RUNNER_PATH/index.html?$QUERY\" tags=\"$TAGS,ie-compat\" compatMode=7"
   - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == true ]  || $BIN $OPTION $RUNNER_PATH/test.js $TARGET_PATH"
   - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == false ] || node ./test/test.js --time-limit 45m"
