--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 env:
   global:
     - BIN="node" EXPORTS="commonjs" NPM_VERSION="^2.0.0"
-    - OPTION="" TEST_BUILDS=false TRANSPILER="none"
+    - OPTION="" QUERY="" TEST_BUILDS=false TRANSPILER="none"
     - LOADER="requirejs" RUNNER_PATH="node_modules/lodash/test"
     - SAUCE_PATH="$RUNNER_PATH/saucelabs.js" SAUCE_USERNAME="lodash"
     - secure: "HUCzn6i9XZ53278fYMICHuHWaVtTZmJCfY4wv3BEu57CGshw9T399Vxul849vIusw3x9cf4iNrrry0RaZga7KfaJIVSESy4zeY4vnsJ+5QCiXGbobpNPYnhU50eTo95MqDh1/Uds+cv2HCo+4VH8yb+6k/p9xX0CC3TvvToX60M="
@@ -30,18 +30,18 @@ matrix:
       env:
     - node_js: "0.10"
       env: EXPORTS="npm"
-#    - node_js: "0.12"
-#      env: EXPORTS="amd"
-#    - node_js: "0.12"
-#      env: EXPORTS="amd" LOADER="curl"
-#    - node_js: "0.12"
-#      env: EXPORTS="amd" LOADER="dojo"
-#    - node_js: "0.12"
-#      env: EXPORTS="amd"
-#    - node_js: "0.12"
-#      env: EXPORTS="amd" LOADER="curl"
-#    - node_js: "0.12"
-#      env: EXPORTS="amd" LOADER="dojo"
+    - node_js: "0.12"
+      env: EXPORTS="amd"
+    - node_js: "0.12"
+      env: EXPORTS="amd" LOADER="curl"
+    - node_js: "0.12"
+      env: EXPORTS="amd" LOADER="dojo"
+    - node_js: "0.12"
+      env: EXPORTS="amd"
+    - node_js: "0.12"
+      env: EXPORTS="amd" LOADER="curl"
+    - node_js: "0.12"
+      env: EXPORTS="amd" LOADER="dojo"
 git:
   depth: 10
 branches:
@@ -58,7 +58,7 @@ before_install:
 #  - "[ $BIN != 'ringo' ] || (sudo ln -s /opt/ringojs-0.11/bin/ringo /usr/local/bin/ringo && sudo chmod +x $_)"
   - "OUTPUT_PATH=\"./$EXPORTS\" && TARGET_PATH=\"../../../$EXPORTS/index.js\""
   - "[ $EXPORTS != 'amd' ] || TARGET_PATH=\"../../../amd/main.js\""
-  - "[ $EXPORTS != 'amd' ] || (QUERY=\"build=$TARGET_PATH&loader=$LOADER\" && TAGS=\"$LOADER,amd,development\")"
+  - "[ $EXPORTS != 'amd' ] || (QUERY=\"build=$TARGET_PATH&loader=$LOADER&noglobals=true\" && TAGS=\"$LOADER,amd,development\")"
   - "[ $EXPORTS != 'amd' ] || npm i chalk@\"^1.0.0\" ecstatic@\"0.8.0\" request@\"^2.0.0\" sauce-tunnel@\"2.2.3\""
   - "([ $EXPORTS != 'es' ] && [ $EXPORTS != 'es6' ]) || TARGET_PATH=\"../../../$EXPORTS/lodash.js\""
   - "[ $EXPORTS != 'npm' ] || OUTPUT_PATH=\"./npm/node_modules\""
@@ -69,9 +69,9 @@ before_install:
   - "[ $TRANSPILER != 'es6-module-transpiler' ] || compile-modules convert -f commonjs -o ./ ./$EXPORTS/*.js ./$EXPORTS/**/*.js"
   - "[ $EXPORTS != 'npm' ] || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
 script:
-#  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
-#  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"backbone tests\"   runner=\"$RUNNER_PATH/backbone.html?$QUERY\"   tags=\"$TAGS,backbone\""
-#  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"underscore tests\" runner=\"$RUNNER_PATH/underscore.html?$QUERY\" tags=\"$TAGS,underscore\""
+  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
+  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"backbone tests\"   runner=\"$RUNNER_PATH/backbone.html?$QUERY\"   tags=\"$TAGS,backbone\""
+  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"underscore tests\" runner=\"$RUNNER_PATH/underscore.html?$QUERY\" tags=\"$TAGS,underscore\""
 #  - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\" runner=\"$RUNNER_PATH/index.html?$QUERY\" tags=\"$TAGS,ie-compat\" compatMode=7"
   - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == true ]  || $BIN $OPTION $RUNNER_PATH/test.js $TARGET_PATH"
   - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == false ] || node ./test/test.js --time-limit 45m"
