--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ env:
 #    - BIN="rhino" OPTION="-opt -1 -require"
 #    - BIN="ringo" OPTION="-o -1"
     - EXPORTS="es"  TRANSPILER="babel"
-    - EXPORTS="es"  TRANSPILER="es6-module-transpiler"
-    - EXPORTS="es6" TRANSPILER="babel"
     - EXPORTS="node"
     - EXPORTS="npm"
     - TEST_BUILDS=true
@@ -60,13 +58,11 @@ before_install:
   - "[ $EXPORTS != 'amd' ] || TARGET_PATH=\"../../../amd/main.js\""
   - "[ $EXPORTS != 'amd' ] || (QUERY=\"build=$TARGET_PATH&loader=$LOADER&noglobals=true\" && TAGS=\"$LOADER,amd,development\")"
   - "[ $EXPORTS != 'amd' ] || npm i chalk@\"^1.0.0\" ecstatic@\"0.8.0\" request@\"^2.0.0\" sauce-tunnel@\"2.2.3\""
-  - "([ $EXPORTS != 'es' ] && [ $EXPORTS != 'es6' ]) || TARGET_PATH=\"../../../$EXPORTS/lodash.js\""
+  - "[ $EXPORTS != 'es' ]  || TARGET_PATH=\"../../../$EXPORTS/lodash.js\""
   - "[ $EXPORTS != 'npm' ] || OUTPUT_PATH=\"./npm/node_modules\""
   - "[ $TEST_BUILDS == true ]   || (npm i && node ./bin/lodash modularize exports=$EXPORTS -o $OUTPUT_PATH)"
   - "[ $TRANSPILER != 'babel' ] || npm i -g babel@\"^5.0.0\""
   - "[ $TRANSPILER != 'babel' ] || babel ./$EXPORTS --out-dir ./$EXPORTS"
-  - "[ $TRANSPILER != 'es6-module-transpiler' ] || npm i -g es6-module-transpiler@\"0.10.0\""
-  - "[ $TRANSPILER != 'es6-module-transpiler' ] || compile-modules convert -f commonjs -o ./ ./$EXPORTS/*.js ./$EXPORTS/**/*.js"
   - "[ $EXPORTS != 'npm' ] || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
 script:
   - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
