Rename `pre-compile` to `preprocess` and `post-compile` to `postprocess`.

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "lib/listing.js",
     "lib/mapping.js",
     "lib/minify.js",
-    "lib/pre-compile.js",
-    "lib/post-compile.js",
+    "lib/preprocess.js",
+    "lib/postprocess.js",
     "lib/util.js",
     "template/license.jst",
     "template/package.jst",
