--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "uglify-js": "2.5.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
+    "babel-cli": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
     "chalk": "^1.1.1",
     "ecstatic": "^1.2.0",
     "qunit-extras": "~1.4.0",
