--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "uglify-js": "2.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
+    "babel": "^5.8.34",
     "chalk": "^1.1.1",
     "ecstatic": "^1.4.0",
     "qunit-extras": "^1.4.5",
