--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "uglify-js": "2.6.1"
   },
   "devDependencies": {
-    "babel": "^5.8.34",
+    "babel-cli": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
     "chalk": "^1.1.1",
     "ecstatic": "^1.4.0",
     "qunit-extras": "^1.4.5",
