--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ node_js:
   - "5"
 env:
   global:
-    - BIN="node" EXPORTS="node" NPM_VERSION="^2.0.0"
-    - OPTION="" QUERY="" TEST_BUILDS=false TRANSPILER="none"
+    - EXPORTS="node"
+    - QUERY="" TEST_BUILDS=false
     - LOADER="requirejs" RUNNER_PATH="node_modules/lodash/test"
     - SAUCE_PATH="$RUNNER_PATH/saucelabs.js" SAUCE_USERNAME="lodash"
     - secure: "HUCzn6i9XZ53278fYMICHuHWaVtTZmJCfY4wv3BEu57CGshw9T399Vxul849vIusw3x9cf4iNrrry0RaZga7KfaJIVSESy4zeY4vnsJ+5QCiXGbobpNPYnhU50eTo95MqDh1/Uds+cv2HCo+4VH8yb+6k/p9xX0CC3TvvToX60M="
   matrix:
     -
-    - EXPORTS="es"  TRANSPILER="babel"
+    - EXPORTS="es"
     - EXPORTS="npm"
     - EXPORTS="amd"
     - EXPORTS="amd" LOADER="curl"
@@ -19,10 +19,6 @@ env:
     - TEST_BUILDS=true
 matrix:
   include:
-    - node_js: "0.8"
-      env: NPM_VERSION="~1.4.0"
-    - node_js: "0.8"
-      env: EXPORTS="npm" NPM_VERSION="~1.4.0"
     - node_js: "0.10"
       env:
     - node_js: "0.10"
@@ -43,19 +39,19 @@ branches:
 before_install:
   - "nvm use $TRAVIS_NODE_VERSION"
   - "npm config set loglevel error"
-  - "npm i -g npm@\"$NPM_VERSION\""
+  - "npm i -g npm@\"^2.0.0\""
   - "git clone --depth=10 --branch=master git://github.com/lodash/lodash ./node_modules/lodash && cd $_ && npm i && cd ../../"
   - "OUTPUT_PATH=\"./$EXPORTS\" && TARGET_PATH=\"../../../$EXPORTS/index.js\""
   - "[ $EXPORTS != 'amd' ] || TARGET_PATH=\"../../../amd/main.js\""
   - "[ $EXPORTS != 'amd' ] || (QUERY=\"build=$TARGET_PATH&loader=$LOADER&noglobals=true\" && TAGS=\"$LOADER,amd,development\")"
   - "[ $EXPORTS != 'es' ]  || TARGET_PATH=\"../../../$EXPORTS/lodash.js\""
   - "[ $EXPORTS != 'npm' ] || OUTPUT_PATH=\"./npm/node_modules\""
-  - "[ $TEST_BUILDS == true ]   || (npm i && node ./bin/lodash modularize exports=$EXPORTS -o $OUTPUT_PATH)"
-  - "[ $TRANSPILER != 'babel' ] || babel ./$EXPORTS --presets es2015 --out-dir ./$EXPORTS"
+  - "[ $TEST_BUILDS == true ] || (npm i && node ./bin/lodash modularize exports=$EXPORTS -o $OUTPUT_PATH)"
+  - "[ $EXPORTS != 'es' ]  || babel ./$EXPORTS --presets es2015 --out-dir ./$EXPORTS"
   - "[ $EXPORTS != 'npm' ] || (cd ./npm && cp ../test/npm/index.js ./index.js && cd ../)"
 script:
   - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"lodash tests\"     runner=\"$RUNNER_PATH/index.html?$QUERY\"      tags=\"$TAGS\""
   - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"backbone tests\"   runner=\"$RUNNER_PATH/backbone.html?$QUERY\"   tags=\"$TAGS,backbone\""
   - "[ $EXPORTS != 'amd' ] || node $SAUCE_PATH name=\"underscore tests\" runner=\"$RUNNER_PATH/underscore.html?$QUERY\" tags=\"$TAGS,underscore\""
-  - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == true ]  || $BIN $OPTION $RUNNER_PATH/test.js $TARGET_PATH"
+  - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == true ]  || node $RUNNER_PATH/test.js $TARGET_PATH"
   - "[ $EXPORTS == 'amd' ] || [ $TEST_BUILDS == false ] || node ./test/test.js --time-limit 45m"
