--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "bin": {
     "lodash": "bin/lodash"
   },
-  "keywords": "builder, compile, customize, lodash, util",
+  "keywords": "builder, compile, customize, lodash",
   "author": "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
   "contributors": [
     "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
