--- a/package.json
+++ b/package.json
@@ -30,12 +30,8 @@
   "devDependencies": {
     "babel-cli": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
-    "chalk": "^1.1.1",
-    "ecstatic": "^1.4.0",
     "qunit-extras": "^1.4.5",
-    "qunitjs": "~1.20.0",
-    "request": "^2.69.0",
-    "sauce-tunnel": "2.3.0"
+    "qunitjs": "~1.20.0"
   },
   "files": [
     "npm-shrinkwrap.json",
