--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lodash-cli",
-  "version": "4.8.1",
-  "description": "The lodash command-line interface.",
+  "version": "4.8.2",
+  "description": "The Lodash command-line interface.",
   "homepage": "https://lodash.com/custom-builds",
   "license": "MIT",
   "preferGlobal": true,
@@ -24,7 +24,7 @@
   "dependencies": {
     "closure-compiler": "0.2.10",
     "glob": "7.0.3",
-    "lodash": "4.8.1",
+    "lodash": "4.8.2",
     "semver": "5.1.0",
     "uglify-js": "2.6.2"
   },
