--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
-    "qunit-extras": "^2.0.0",
-    "qunitjs": "~1.23.1"
+    "qunit-extras": "^2.0.1",
+    "qunitjs": "^2.0.0"
   },
   "files": [
     "bin/lodash",
