--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "closure-compiler": "0.2.12",
     "glob": "7.0.5",
-    "lodash": "4.15.0",
+    "lodash": "4.16.0-pre",
     "semver": "5.3.0",
     "uglify-js": "2.7.0"
   },
