Add greenkeeper ignore field to packagre.json. [ci skip]

--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
     "lib",
     "template",
     "npm-shrinkwrap.json"
-  ]
+  ],
+  "greenkeeper": {
+    "ignore": [
+      "lodash"
+    ]
+  }
 }
