--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "closure-compiler": "0.2.12",
     "glob": "7.1.0",
-    "lodash": "4.16.2",
+    "lodash": "4.16.3-pre",
     "semver": "5.3.0",
     "uglify-js": "2.7.3"
   },
