--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 sudo: false
 node_js:
-  - 6
+  - 7
 
 cache:
   directories:
@@ -24,11 +24,14 @@ env:
 
 matrix:
   include:
+    - node_js: 6
+      env:
+    - node_js: 6
+      env: EXPORTS=npm
     - node_js: 4
       env:
     - node_js: 4
       env: EXPORTS=npm
-
 git:
   depth: 10
 
