--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "0.0.6",
     "qunit-extras": "^3.0.0",
     "qunitjs": "^2.0.1"
   },
