--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-env": "^1.1.4",
     "qunit-extras": "^3.0.0",
-    "qunitjs": "^2.1.0"
+    "qunitjs": "2.1.0"
   },
   "files": [
     "bin",
